# Discord-Handler-Cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/commands/prefix/: Ping.hpp
src/commands/slash/: Ping.hpp
src/config/: Config.hpp
src/core/: CommandUtils.cpp  CommandUtils.hpp  Emojis.hpp  WebhookUtil.hpp
src/database/: Mongo.hpp
src/events/: GuildCreate.hpp  GuildDelete.hpp  InteractionCreate.hpp  MessageCreate.hpp  Ready.hpp
src/handlers/: AntiCrash.cpp  AntiCrash.hpp  Logger.hpp
src/models/: UserModel.hpp
